tests/paczka2/big_fuzzy/67795651.err
Error in line 11: A852 A852 58,82
Error in line 14: EgE0F1Tmbh S206 56,5
Error in line 23: mUp6I A499 81,4
Error in line 29: EgE0F1Tmbh A852 79,3
Error in line 41: EgE0FMTmbh S206 M79,0
Error in line 39: EgE0F1Tmbh S206 65,1
Error in line 48: mUp6I S218 347,5
Error in line 60: OiW83p S206 286,8
Error in line 67: seZQ7u8W6 A852 4,4
Error in line 66: OiW83p S218 95,2
Error in line 75: hk4q A499 15,8
Error in line 94: EgE0F1Tmbh S218 14,9
Error in line 95: A852 S206 68,0
Error in line 92: seZQ7u8W6 S218 20,3
Error in line 99: EgE0F1Tmbh S206 25,5
Error in line 86: mUp6I A499 51,4
Error in line 106: mUp6I S218 38,8
Error in line 84: OiW83p A852 87,8
Error in line 117: OiW83p A852 75,6
Error in line 97: hk4q S218 130,7
Error in line 118: EgE0F1Tmbh S218 67,0
Error in line 121: OiW83p S206 60,4
Error in line 126: mUp6I A852 97,8
Error in line 135: hk4q A499 42,5
Error in line 141: hk4q A852 36,9
Error in line 145: seZQ7u8W6 S218 42,9
Error in line 147: hk4q S218 18,3
Error in line 142: OiW83p S206 23,5
Error in line 161: A852 A499 52,8
Error in line 127: slPk S218 313,7
Error in line 175: slPk A499 7,7
Error in line 179: seZQ7u8W6 S206 29,0
Error in line 176: mUp6I A852 32,4
Error in line 187: mUp6I S206 34,3
Error in line 202: EgE0F1Tmbh A852 29,3
Error in line 210: slPk A499 93,8
Error in line 213: A852 S206 94,7
Error in line 206: EgE0F1Tmbh A499 79,3
Error in line 228: mUp6I S206 30,2
Error in line 241: EgE0F1Tmbh S206 181,9
Error in line 244: EgE0F1Tmbh S218 80,0
Error in line 247: EgE0F1Tmbh S206 99,2
